Fri Jan 24 06:05:36 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (read-line!, read-delimited!, read-delimited,
	read-line): new	procedures, see libguile/ChangeLog.

Thu Jan 16 17:07:03 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	Added dynamic linking of modules. See libguile/DYNAMIC-LINKING.

	* boot-9.scm (split-c-module-name, convert-c-registered-modules,
 	init-dynamic-module, dynamic-maybe-call,
 	find-and-link-dynamic-module, link-dynamic-module,
 	try-module-dynamic-link, registered-modules): New definitions for
 	dynamic linking of modules.
	(resolve-module): Try to dynamically link the requested module
 	after failing to load it as Scheme code.

Wed Jan  8 05:50:14 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (getservbyport, getservbyname): remove stray %.

Tue Jan  7 20:02:24 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* boot-9.scm (and=>): Rename THUNK argument to PROCEDURE, 'cos
	that's what it is.

	* lineio.scm (make-line-buffering-input-port): Properly test for
	the case of an empty buffer list.  The old code assumed that '()
	was false.

Mon Jan  6 01:13:53 1997  Mikael Djurfeldt  <mdj@kenneth>

*	* boot-9.scm (use-modules): New macro (from Marius Vollmer).
	(use-modules <module name> ...) Put the the modules named by
 	<module name> ... on the use list of the current module.

Sun Jan  5 15:52:59 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* boot-9.scm (error-catching-loop): Remove message saying that
	typing "$" will put you in the debugger.  This isn't implemented
	yet.

Sun Dec 22 23:27:25 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* boot-9.scm (delq-all!): Function deleted; delq!'s semantics have
	been fixed, so this function is superfluous.
	(transform-usage-lambda): Use delq!, not delq-all!.

Tue Dec 17 20:36:45 1996  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (resolve-module): New optional parameter that
 	controls whether autoloading is attempted or not. Default is #t.