@@ -1,3 +1,8 @@
+Mon Feb 10 03:01:48 1997  Mikael Djurfeldt  <mdj@kenneth>
+
+	* boot-9.scm (backtrace): Removed.  (A C version now exists in
+	backtrace.c.)
+
 Fri Jan 24 06:05:36 1997  Gary Houston  <ghouston@actrix.gen.nz>
 
 	* boot-9.scm (read-line!, read-delimited!, read-delimited,
